--- a/index.html
+++ b/index.html
@@ -12,10 +12,65 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Meet Our Team  MARCO BIANCHI</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui deleniti magnam inventore tempora. Adipisci fuga totam voluptatum, magnam possimus ea dolorem earum sequi iure cumque sunt. Eaque eos obcaecati fugiat odit pariatur dolorem reprehenderit eius consequuntur iure dolores.</p>
+        <div class="container center">
+            <h1>Meet Our Team</h1>
+            <p class="widht">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui deleniti magnam inventore tempora. Adipisci fuga totam voluptatum, magnam possimus ea dolorem earum sequi iure cumque sunt. Eaque eos obcaecati fugiat odit pariatur dolorem reprehenderit eius consequuntur iure dolores.</p>
         </div>
     </header>
+    <main>
+        <div class="container">
+            <div class="box left">
+                <img src="./img/male1.png" alt="Marco" class="left">
+                <div class="left padding">
+                    <h4>MARCO BIANCHI</h4>
+                    <p>Designer</p>
+                    <a href="">marcobianchi@team.com</a>
+                </div>
+            </div>
+            <div class="box left">
+                <img src="./img/male1.png" alt="Marco" class="left">
+                <div class="left padding">
+                    <h4>MARCO BIANCHI</h4>
+                    <p>Designer</p>
+                    <a href="">marcobianchi@team.com</a>
+                </div>
+            </div>
+            <div class="box left">
+                <img src="./img/male1.png" alt="Marco" class="left">
+                <div class="left padding">
+                    <h4>MARCO BIANCHI</h4>
+                    <p>Designer</p>
+                    <a href="">marcobianchi@team.com</a>
+                </div>
+            </div>
+            <div class="box left">
+                <img src="./img/male1.png" alt="Marco" class="left">
+                <div class="left padding">
+                    <h4>MARCO BIANCHI</h4>
+                    <p>Designer</p>
+                    <a href="">marcobianchi@team.com</a>
+                </div>
+            </div>
+            <div class="box left">
+                <img src="./img/male1.png" alt="Marco" class="left">
+                <div class="left padding">
+                    <h4>MARCO BIANCHI</h4>
+                    <p>Designer</p>
+                    <a href="">marcobianchi@team.com</a>
+                </div>
+            </div>
+            <div class="box left">
+                <img src="./img/male1.png" alt="Marco" class="left">
+                <div class="left padding">
+                    <h4>MARCO BIANCHI</h4>
+                    <p>Designer</p>
+                    <a href="">marcobianchi@team.com</a>
+                </div>
+            </div>
+            
+
+        </div>
+        
+    </main>
 </body>
 </html>
