--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container center">
             <h1>Meet Our Team</h1>
-            <p class="widht">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui deleniti magnam inventore tempora. Adipisci fuga totam voluptatum, magnam possimus ea dolorem earum sequi iure cumque sunt. Eaque eos obcaecati fugiat odit pariatur dolorem reprehenderit eius consequuntur iure dolores.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui deleniti magnam inventore tempora. Adipisci fuga totam voluptatum, magnam possimus ea dolorem earum sequi iure cumque sunt. Eaque eos obcaecati fugiat odit pariatur dolorem reprehenderit eius consequuntur iure dolores.</p>
         </div>
     </header>
     <main>
