add-project completed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container center">
             <h1>Meet Our Team</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui deleniti magnam inventore tempora. Adipisci fuga totam voluptatum, magnam possimus ea dolorem earum sequi iure cumque sunt. Eaque eos obcaecati fugiat odit pariatur dolorem reprehenderit eius consequuntur iure dolores.</p>
+            <p class="widht">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui deleniti magnam inventore tempora. Adipisci fuga totam voluptatum, magnam possimus ea dolorem earum sequi iure cumque sunt. Eaque eos obcaecati fugiat odit pariatur dolorem reprehenderit eius consequuntur iure dolores.</p>
         </div>
     </header>
     <main>
@@ -28,49 +28,46 @@
                 </div>
             </div>
             <div class="box left">
-                <img src="./img/male1.png" alt="Marco" class="left">
+                <img src="./img/female1.png" alt="Laura" class="left">
                 <div class="left padding">
-                    <h4>MARCO BIANCHI</h4>
-                    <p>Designer</p>
-                    <a href="">marcobianchi@team.com</a>
+                    <h4>LAURA ROSSI</h4>
+                    <p>Front-end Developer</p>
+                    <a href="">laurarossi@team.com</a>
                 </div>
             </div>
             <div class="box left">
-                <img src="./img/male1.png" alt="Marco" class="left">
+                <img src="./img/male2.png" alt="Giorgio" class="left">
                 <div class="left padding">
-                    <h4>MARCO BIANCHI</h4>
+                    <h4>GIORGIO VERDI</h4>
                     <p>Designer</p>
-                    <a href="">marcobianchi@team.com</a>
+                    <a href="">giorgioverdi@team.com</a>
                 </div>
             </div>
             <div class="box left">
-                <img src="./img/male1.png" alt="Marco" class="left">
+                <img src="./img/female2.png" alt="Marta" class="left">
                 <div class="left padding">
-                    <h4>MARCO BIANCHI</h4>
+                    <h4>MARTA IPSUM</h4>
                     <p>Designer</p>
-                    <a href="">marcobianchi@team.com</a>
+                    <a href="">maartaipsum@team.com</a>
                 </div>
             </div>
             <div class="box left">
-                <img src="./img/male1.png" alt="Marco" class="left">
+                <img src="./img/male3.png" alt="Roberto" class="left">
                 <div class="left padding">
-                    <h4>MARCO BIANCHI</h4>
+                    <h4>ROBERTO LOREM</h4>
                     <p>Designer</p>
-                    <a href="">marcobianchi@team.com</a>
+                    <a href="">robertolorem@team.com</a>
                 </div>
             </div>
             <div class="box left">
-                <img src="./img/male1.png" alt="Marco" class="left">
+                <img src="./img/female3.png" alt="Daniela" class="left">
                 <div class="left padding">
-                    <h4>MARCO BIANCHI</h4>
+                    <h4>DANIELA AMET</h4>
                     <p>Designer</p>
-                    <a href="">marcobianchi@team.com</a>
+                    <a href="">danielaamet@team.com</a>
                 </div>
             </div>
-            
-
-        </div>
-        
+         </div>
     </main>
 </body>
 </html>
